Bug 1383775 - Clean up function toString/toSource code, remove remnants of source decompiler. r=anba